src/objects/CPA_LOI__c.object
<CustomObject>
    <description>Letter of Intent - If the project work starts early, before the POW is created, ADM can submit LOI, a commercial cover which caters to work at risk. It’s possible to have multiple LOIs for a PWORF. Can be created only before PWO is submitted.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOI_Count__c</fullName>
        <description>This field created for reporting purpose.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOI Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Man_days_being_requested__c</fullName>
        <inlineHelpText>Total Number of Man-days being requested for this WAR request at MC Rates</inlineHelpText>
        <label>W@R mandays approved at MC Rates*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>auto_Internal_LOI_ID__c</fullName>
        <displayFormat>LOI-{00000}</displayFormat>
        <label>Internal LOI ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>chk_Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract_Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cur_Previously_agreed_amounts_in_Er_val__c</fullName>
        <description>Previously agreed WAR amounts (in euro value)</description>
        <inlineHelpText>Previously agreed WAR amounts (in euro value)</inlineHelpText>
        <label>Previously agreed amounts in Euro value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_Total_value_in_Euro_being_requested__c</fullName>
        <description>Total value in Euros being requested for this WAR</description>
        <inlineHelpText>Total value in Euros being requested for this WAR</inlineHelpText>
        <label>W@R total value in € being requested*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dat_Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Resubmitted_Date__c</fullName>
        <label>Resubmitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Sent_for_Signature_Date__c</fullName>
        <label>Sent for Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Signed_Date__c</fullName>
        <label>Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dat_Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_LOI_End_date__c</fullName>
        <description>Date when the WAR Ends</description>
        <label>LOI End Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dt_LOI_Start_Date__c</fullName>
        <description>Date when the WAR commences</description>
        <label>LOI Start Date*</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eml_Unilever_Budget_Approver_Email__c</fullName>
        <description>Unilever Budget Approver Email</description>
        <label>Unilever Budget Approver Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>eml_Unilever_Content_Approver_Email__c</fullName>
        <description>Unilever Content Approver Email</description>
        <label>Unilever Content Approver Email*</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fml_PWORF_Clarity_ID__c</fullName>
        <formula>lkp_PWORF__r.txt_Clarity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PWORF Clarity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isValidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lkp_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LOI2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_PWORF__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PWORF</label>
        <referenceTo>CPA_PWORF__c</referenceTo>
        <relationshipLabel>LOI</relationshipLabel>
        <relationshipName>LOI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Unilever_budget_approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Unilever person responsible for approving the project budget</description>
        <label>Unilever Budget Approver*</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LOI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Unilever_content_approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of Unilever person responsible for approving the project content</description>
        <label>Unilever Content Approver*</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LOI1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mpkl_Phases_covered_by_WAR__c</fullName>
        <description>Phases of project covered under WAR</description>
        <label>Phases Covered by W@R*</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>num_Expense_charges_of_LOI__c</fullName>
        <description>Expenses incurred under WAR</description>
        <label>Expense Charges of LOI*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_If_applicable_please_specify_the__c</fullName>
        <inlineHelpText>If applicable, please specify the amount in € of the Overall Total WAR which is based upon the MC Rate Card</inlineHelpText>
        <label>If applicable, please specify the amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_If_applicable_specify_amt_euro__c</fullName>
        <description>If applicable, please specify the amount in € of the Overall Total WAR which is based upon the MC Rate Card</description>
        <inlineHelpText>If applicable, please specify the amount in € of the Overall Total WAR which is based upon the MC Rate Card</inlineHelpText>
        <label>If applicable, specify amount in €…</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Previously_agreed_amounts_in_man_day__c</fullName>
        <description>Previously agreed WAR amounts (in man-days)</description>
        <inlineHelpText>Previously agreed WAR amounts (in man-days)</inlineHelpText>
        <label>Previously agreed amounts in man-days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Total_number_of_man_days_requested__c</fullName>
        <description>Total number of man-days being requested for this WAR</description>
        <inlineHelpText>Total number of man-days being requested for this WAR</inlineHelpText>
        <label>W@R total number of man days requested*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>num_Total_value_in_being_requested_for__c</fullName>
        <inlineHelpText>Total value in € being requested for this WAR?</inlineHelpText>
        <label>W@R € spend approved at MC Rates*</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkl_Approval_Comment_Check__c</fullName>
        <label>Approval Comment Check</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Currency__c</fullName>
        <description>Currency of the charges/costs</description>
        <label>Currency*</label>
        <picklist>
            <picklistValues>
                <fullName>EURO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Status__c</fullName>
        <description>Auto generated based on user actions</description>
        <label>Status*</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resubmitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_Accenture_Project_Manager__c</fullName>
        <label>Vendor Project Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Action__c</fullName>
        <description>Action Pending</description>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Internal_LOI_ID__c</fullName>
        <description>this field will store incremental internal LOI ID, used for search purpose</description>
        <label>Internal LOI ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Internal_PWO_ID__c</fullName>
        <description>Populated from PWORF</description>
        <label>Internal PWO ID*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Other_Currency__c</fullName>
        <description>If Currency selected is OTHER, then this field is mandatory.</description>
        <inlineHelpText>If Currency selected is OTHER, then this field is mandatory.</inlineHelpText>
        <label>Other Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Other_Phases_Covered_by_W_R__c</fullName>
        <inlineHelpText>Mandatory if &apos;Other&apos; is selected in Phases Covered by W@R</inlineHelpText>
        <label>Other Phases Covered by W@R</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWO_number__c</fullName>
        <description>PWO ID</description>
        <label>PWO Number*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_PWO_title__c</fullName>
        <description>Title mentioned in the LOI</description>
        <label>PWO Title*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Budget_Approver_Name__c</fullName>
        <description>Unilever Budget Approver Name</description>
        <label>Unilever Budget Approver Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Clarity_ID__c</fullName>
        <description>Clarity ID of the project</description>
        <label>Unilever Clarity ID*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Unilever_Content_Approver_Name__c</fullName>
        <description>Unilever Content Approver Name</description>
        <label>Unilever Content Approver Name*</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Vendor_LOI_ID__c</fullName>
        <label>Vendor LOI ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_Reason_for_Cancellation__c</fullName>
        <label>Reason for Cancellation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Reason_for_Return__c</fullName>
        <inlineHelpText>LOI can be return if Status is Sent for Signature</inlineHelpText>
        <label>Reason for Return</label>
        <type>TextArea</type>
    </fields>
    <label>LOI</label>
    <listViews>
        <fullName>All_LOI</fullName>
        <columns>NAME</columns>
        <columns>pkl_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All LOI</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CAP_ULPM_CPA_LOI</fullName>
        <filterScope>Queue</filterScope>
        <label>ULPM</label>
        <queue>CAP_ULPM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAP_VDM_Queue_CPA_LOI</fullName>
        <filterScope>Queue</filterScope>
        <label>VDM</label>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CPA_SMT_CPA_LOI</fullName>
        <filterScope>Queue</filterScope>
        <label>SMT</label>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOI_Assigned_to_SMT</fullName>
        <columns>NAME</columns>
        <columns>lkp_PWORF__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>txt_Internal_PWO_ID__c</columns>
        <columns>fml_PWORF_Clarity_ID__c</columns>
        <columns>txt_PWO_number__c</columns>
        <columns>txt_PWO_title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>LOI Assigned to SMT</label>
        <language>en_US</language>
        <queue>CPA_SMT</queue>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_VDM_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOI_Assigned_to_VDM</fullName>
        <columns>NAME</columns>
        <columns>lkp_PWORF__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>txt_Internal_PWO_ID__c</columns>
        <columns>fml_PWORF_Clarity_ID__c</columns>
        <columns>txt_PWO_number__c</columns>
        <columns>txt_PWO_title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <label>LOI Assigned to VDM</label>
        <language>en_US</language>
        <queue>CAP_VDM_Queue</queue>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_VDM_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LOI_Created_By_Me</fullName>
        <columns>NAME</columns>
        <columns>lkp_PWORF__c</columns>
        <columns>pkl_Status__c</columns>
        <columns>txt_Internal_PWO_ID__c</columns>
        <columns>fml_PWORF_Clarity_ID__c</columns>
        <columns>txt_PWO_number__c</columns>
        <columns>txt_PWO_title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>LOI Created By Me</label>
        <language>en_US</language>
        <sharedTo>
            <group>CAP_SMT_Group</group>
            <group>CAP_VDM_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LOI-{00000}</displayFormat>
        <label>Internal LOI ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LOI</pluralLabel>
    <recordTypes>
        <fullName>LOI_Accepted</fullName>
        <active>true</active>
        <label>LOI Accepted</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI_Cancael</fullName>
        <active>true</active>
        <description>After Cancel</description>
        <label>LOI Cancael</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI_Cancel</fullName>
        <active>true</active>
        <description>After Cancel</description>
        <label>LOI Cancel</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI_Other</fullName>
        <active>true</active>
        <label>LOI Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI_Submitted</fullName>
        <active>true</active>
        <label>LOI Submitted</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CPA_New_LOI_cant_be_created</fullName>
        <active>false</active>
        <description>LOI cant be created before PWORF get approved by Vendor</description>
        <errorConditionFormula>OR( 
ISPICKVAL(lkp_PWORF__r.pkl_Status__c , &quot;Submitted&quot;), 
ISPICKVAL(lkp_PWORF__r.pkl_Status__c , &quot;Cancelled&quot;), 
ISPICKVAL(lkp_PWORF__r.pkl_Status__c , &quot;Resubmitted&quot;), 
ISPICKVAL(lkp_PWORF__r.pkl_Status__c , &quot;Withhold&quot;), 
ISPICKVAL(lkp_PWORF__r.pkl_Status__c , &quot;Returned&quot;), 
ISPICKVAL(lkp_PWORF__r.pkl_Status__c , &quot;Rejected&quot;), 
ISPICKVAL(lkp_PWORF__r.pkl_Status__c , &quot;Saved&quot;)



)</errorConditionFormula>
        <errorMessage>LOI cant be created because, PWORF is not  Accepted / Auto Accepted</errorMessage>
    </validationRules>
</CustomObject>